# Qwen-Image-Edit-StreamDiffusion

./: .dockerignore  .gitignore  Dockerfile  README.md  benchmark.py  benchmark_2step_nocfg.py  benchmark_bf16_sizes.py  benchmark_compile.py  benchmark_fp4.py  benchmark_fp4_lightning.py  benchmark_fp8.py  benchmark_gb10.py  benchmark_lightning.py  benchmark_lightning_compile.py  benchmark_lightning_sizes.py  benchmark_optimizations.py  docker-compose.yml  fp8_calibrate.py  fp8_linear.py  fp8_pipeline.py  gpu_utils.py  main.py  pyproject.toml  qwen_realtime.py  server.py  test_compiled.py  test_gpu_direct.py  test_gpu_speed.py  test_minimal.py  test_quantized.py  test_qwen_edit.py  webui_realtime.py
frontend/: package-lock.json
frontend/src/: App.js
